--- a/index.html
+++ b/index.html
@@ -39,9 +39,40 @@
     
   </header>
 
-  <main>M</main>
+  <main>
 
-  <footer>F</footer>
+    <section class="study">
+      <div class="container-study">
+        <p class="col study-img">img</p>
+        <p class="col study-text">testo</p>
+      </div>
+    </section>
+
+    <section class="dove">
+      <div class="container-dove">
+        <p class="col dove-text">testo</p>
+        <p class="col dove-img">img</p>
+      </div>
+    </section>
+
+    <section class="fandom">
+      <div class="container-fandom">
+        <p class="col fandom-img">img</p>
+        <p class="col fandom-text">testo</p>
+      </div>
+    </section>
+
+    <section class="tecnologia">
+      <div class="container-tecno">
+        <p>testo tecnologia</p>
+      </div>
+    </section>
+
+  </main>
+
+  <footer>
+    
+  </footer>
 
 </body>
 
